--- a/main.html
+++ b/main.html
@@ -3,11 +3,42 @@
 <html>
 
 <head>
+	 <title>Semantic Navbar & Audios</title>
+
 	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	
+	   <!-- Part 1: Navbar -->
+    <nav>
+        <ul>
+            <li><a href="https://www.google.com">Home</a></li>
+            <li><a href="https://www.wikipedia.org">About</a></li>
+            <li><a href="https://www.github.com">Contact</a></li>
+        </ul>
+    </nav>
+
+    <!-- Part 2: Audio Section -->
+    <section>
+        <h2>3 Random Audios</h2>
+
+        <audio controls>
+            <source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mpeg">
+            Your browser does not support the audio element.
+        </audio>
+
+        <audio controls>
+            <source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
+            Your browser does not support the audio element.
+        </audio>
+
+        <audio controls>
+            <source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mpeg">
+            Your browser does not support the audio element.
+        </audio>
+    </section>
+
     <script type="text/javascript" src="./script.js">
 </script>
 
